css/main.css
	html {
		scroll-behavior: smooth;
	}
	
	@media screen and (prefers-reduced-motion: reduce) {
		html {
			scroll-behavior: auto;
		}
	}
	body {
		padding: 1.5em;
		animation: fadeIn 1.5s linear 1s 1; -webkit-animation: fadeIn 1.5s linear 0s 1 alternate;
	}	
	p {
		line-height: 1.6em;
		clear: both;
	}
	#logo {
		color:var(--logo-color);
		text-decoration: none;
		letter-spacing: 0.2em;
		font-size:1.5em;
		-webkit-animation:text-blur-out 3s cubic-bezier(.47,0.000,.745,.715) .2s reverse both;animation:text-blur-out 3s cubic-bezier(.47,0.000,.745,.715) .2s reverse both;
	}
	.item {
		text-transform: none;
		padding:1em 0 1em 0;
	}
	img {width:100%;}
	.wrapper {width:100%;padding:0 0 0.5em;}
	.progress-bar {
	width: 90%;
    height: 12px;
    background-color: #e0e0e0;
    padding: 5px;
    border-radius: 3px;
    box-shadow: inset 0 1px 3px rgba(0, 0, 0, .2);
	}
	.progress-bar-fill {
		display: block;
		height: 10px;
		background-color: var(--yellow);
		border-radius: 3px;
		transition: width 500ms ease-in-out;
	}
	ul li{font-family: var(--font-alt);}
	blockquote p {display: flex;align-items: center;padding: 15px;color: var(--Musta);font-size: 24px;font-weight: bold;}

	blockquote p:before {content: '”';font-family: var(--lf);padding: 0 15px;margin: 0px;font-size: 120px;}
	blockquote p:after {content: '';font-family: var(--lf);padding: 0 15px;margin: 0px;font-size: 120px;}
	blockquote header {display: grid;justify-self:center;height: 1.9rem;margin: 0rem;font-size: 16px;text-transform: uppercase;letter-spacing: 2px;}

	ul.menu  {
		list-style-type: none;
		margin: 1px;
		padding:1.0em 0 2.5em;
		background: none;
		text-align: center;
		color: var(--black);
		text-transform: uppercase;
		letter-spacing: .1rem;
		grid-column:1;
	  }
	ul.menu > li > a:hover {
		-webkit-animation:text-blur-out 0.3s cubic-bezier(.55,.085,.68,.53) .1s reverse both;animation:text-blur-out 0.3s cubic-bezier(.55,.085,.68,.53) .1s reverse both
	}
	ul.menu > li > a:hover > i {
		-webkit-animation:heartbeat 1.5s ease-in-out 2 both;animation:heartbeat 1.5s ease-in-out 2 both
	}
	ul.menu > li > a {
		color: var(--gray-10);
		font-weight: 700;
		font-size: 1rem;
		text-decoration:none;}
	ul.menu > li {grid-column: span 3 ;
		display: block;
		padding:1em;
	}	

	/* GG.css settings */
	i.gg-card-spades, i.gg-chevron-right, i.gg-code-slash, i.gg-profile {
		display:inline-block;
		align-self:center;
	}
	/* anchors */
	#home, #set, #works, #me, #contactme{overflow-anchor: auto;}

	/* animations */
	@keyframes fadeIn{0% {opacity:0;}100% {opacity:1;}}
	@-webkit-keyframes fadeIn {0% {opacity:0;}100% {opacity:1;}}

	@-webkit-keyframes text-blur-out{0%{-webkit-filter:blur(.01);filter:blur(.01)}100%{-webkit-filter:blur(12px) opacity(0);filter:blur(12px) opacity(0)}}@keyframes text-blur-out{0%{-webkit-filter:blur(.01);filter:blur(.01)}100%{-webkit-filter:blur(12px) opacity(0);filter:blur(12px) opacity(0)}}
	@-webkit-keyframes logo-animation{0%{-webkit-filter:blur(.01);filter:blur(.01)}100%{-webkit-filter:blur(12px) opacity(0);filter:blur(12px) opacity(0)}}@keyframes logo-animation{0%{-webkit-filter:blur(.01);filter:blur(.01)}100%{-webkit-filter:blur(12px) opacity(0);filter:blur(12px) opacity(0)}}
	@-webkit-keyframes heartbeat
	{from{-webkit-transform:scale(1);transform:scale(1);-webkit-transform-origin:center center;transform-origin:center center;-webkit-animation-timing-function:ease-out;animation-timing-function:ease-out}10%{-webkit-transform:scale(.91);transform:scale(.91);-webkit-animation-timing-function:ease-in;animation-timing-function:ease-in}17%{-webkit-transform:scale(.98);transform:scale(.98);-webkit-animation-timing-function:ease-out;animation-timing-function:ease-out}33%{-webkit-transform:scale(.87);transform:scale(.87);-webkit-animation-timing-function:ease-in;animation-timing-function:ease-in}45%{-webkit-transform:scale(1);transform:scale(1);-webkit-animation-timing-function:ease-out;animation-timing-function:ease-out}}@keyframes heartbeat{from{-webkit-transform:scale(1);transform:scale(1);-webkit-transform-origin:center center;transform-origin:center center;-webkit-animation-timing-function:ease-out;animation-timing-function:ease-out}10%{-webkit-transform:scale(.91);transform:scale(.91);-webkit-animation-timing-function:ease-in;animation-timing-function:ease-in}17%{-webkit-transform:scale(.98);transform:scale(.98);-webkit-animation-timing-function:ease-out;animation-timing-function:ease-out}33%{-webkit-transform:scale(.87);transform:scale(.87);-webkit-animation-timing-function:ease-in;animation-timing-function:ease-in}45%{-webkit-transform:scale(1);transform:scale(1);-webkit-animation-timing-function:ease-out;animation-timing-function:ease-out}}

